force-app/main/default/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>TypeOfContact__c</fullName>
        <label>TypeOfContact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>US_Entry_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>US Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>US_Schools_For_3_Years_List__c</fullName>
        <description>The school name(s), city, state, and dates attended of US schools attended in the last 3 years</description>
        <encryptionScheme>None</encryptionScheme>
        <label>US Schools For 3 Years List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unverified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unverified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UseSalesforce__c</fullName>
        <label>Uses salesforce.com</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>V2_External_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>V2 External ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>V2_Role__c</fullName>
        <label>V2 Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Parent or Legal Guardian</fullName>
                </value>
                <value>
                    <fullName>Designated Caretaker</fullName>
                </value>
                <value>
                    <fullName>Learning Coach</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Who_Has_Student_Custody__c</fullName>
        <description>How custody is determined</description>
        <label>Who Has Student Custody</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Biological/adoptive parent(s) as identified on the birth certificate</fullName>
                </value>
                <value>
                    <fullName>Biological/adoptive parent(s) with legal custody (custody decided by court)</fullName>
                </value>
                <value>
                    <fullName>Caretaker with legal guardianship</fullName>
                </value>
                <value>
                    <fullName>Caretaker without legal guardianship</fullName>
                </value>
                <value>
                    <fullName>Emancipated or student is 18 or older</fullName>
                </value>
                <value>
                    <fullName>Ward of the court</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Why_Is_Your_Child_Attending_CA__c</fullName>
        <description>What are the primary reasons the caretaker would like the child to attend Connections Academy?</description>
        <label>Why Is Your Child Attending CA</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>For various reasons, we are dissatisfied with our local public school</fullName>
                </value>
                <value>
                    <fullName>Student did not receive adequate attention from the teacher</fullName>
                </value>
                <value>
                    <fullName>Student has or had mental health concerns</fullName>
                </value>
                <value>
                    <fullName>Student has or had physical health concerns</fullName>
                </value>
                <value>
                    <fullName>Student needs a flexible schedule</fullName>
                </value>
                <value>
                    <fullName>Student was ahead academically</fullName>
                </value>
                <value>
                    <fullName>Student was bullied</fullName>
                </value>
                <value>
                    <fullName>Student was recommended/referred to us by prior school</fullName>
                </value>
                <value>
                    <fullName>Student was struggling academically</fullName>
                </value>
                <value>
                    <fullName>Student was suspended or expelled</fullName>
                </value>
                <value>
                    <fullName>Virtual school will enable me to be more involved with my student&apos;s learning</fullName>
                </value>
                <value>
                    <fullName>I am concerned about my child&apos;s safety at their current school</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__AlternateEmail__c</fullName>
        <description>An optional email address not captured in other email fields.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Alternate Email is an optional email not captured in other email fields.</inlineHelpText>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>hed__Chosen_Full_Name__c</fullName>
        <description>The full name that this Contact prefers to use in place of their legal name.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The full name that the Contact prefers to use instead of a legal or official name.</inlineHelpText>
        <label>Chosen Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Citizenship_Status__c</fullName>
        <description>The Contact&apos;s citizenship status.</description>
        <inlineHelpText>The Contact&apos;s citizenship status.</inlineHelpText>
        <label>Citizenship Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>U.S. Citizen or U.S. National</fullName>
                </value>
                <value>
                    <fullName>U.S. Dual Citizen</fullName>
                </value>
                <value>
                    <fullName>U.S. Permanent Resident</fullName>
                </value>
                <value>
                    <fullName>U.S. Refugee or Asylee</fullName>
                </value>
                <value>
                    <fullName>Other (Non-U.S.)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Citizenship__c</fullName>
        <description>The person&apos;s country of citizenship. If this student has dual citizenship, indicate the second country of citizenship in the Dual Citizenship field.</description>
        <label>Citizenship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Åland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas (the)</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia (Plurinational State of)</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius and Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Contact_JSON__c</fullName>
        <description>A system field that stores a large JSON structure used for integrations. Do not modify this field.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>hed__Country_of_Origin__c</fullName>
        <description>The country where this person was born.</description>
        <label>Country of Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Åland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas (the)</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia (Plurinational State of)</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius and Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Current_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the current Address record for this Contact. The Contact&apos;s Mailing Address field is automatically populated with the address fields from the current Address record.</description>
        <inlineHelpText>The current Address that the Contact&apos;s mailing fields are filled with.</inlineHelpText>
        <label>Current Address</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>hed__Address__c.hed__Parent_Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <infoMessage>To see all addresses for the Contact&apos;s household, enter A-* in the search window</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>hed__Address__c</referenceTo>
        <relationshipLabel>Contacts (Current Address)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Date_Deceased__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Deceased</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hed__Deceased__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this person is deceased. When selected, also enables Do Not Contact, Do Not Call, Email Opt Out, and Fax Opt Out. If the Contact is not the only member of the Household, the Contact name is removed from the Household name.</description>
        <inlineHelpText>When selected, this option marks the contact as deceased, and excludes them from household naming, emails, and phone calls.</inlineHelpText>
        <label>Deceased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__Do_Not_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this person does not want your organization to call or email. Use this field to filter out Contacts in email and phone lists.</description>
        <inlineHelpText>When selected, this option excludes the contact from emails and phone calls.</inlineHelpText>
        <label>Do Not Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__Dual_Citizenship__c</fullName>
        <description>For people who have dual citizenship, the second country of citizenship.</description>
        <inlineHelpText>If this Contact has multiple citizenship it can be recorded here.</inlineHelpText>
        <label>Dual Citizenship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Åland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas (the)</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia (Plurinational State of)</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius and Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Ethnicity__c</fullName>
        <description>Indicates if this person identifies as Hispanic or Latino.</description>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hispanic or Latino</fullName>
                </value>
                <value>
                    <fullName>Not Hispanic or Latino</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Exclude_from_Household_Formal_Greeting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field currently isn&apos;t tied to product functionality.</description>
        <inlineHelpText>Checking this box will exclude this contact from the Household Formal Greeting.</inlineHelpText>
        <label>Exclude from Household Formal Greeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__Exclude_from_Household_Informal_Greeting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field currently isn&apos;t tied to product functionality.</description>
        <inlineHelpText>Checking this box will exclude this contact from the Household Informal Greeting.</inlineHelpText>
        <label>Exclude from Household Informal Greeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__Exclude_from_Household_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, this Contact is excluded from the Household Name.</description>
        <inlineHelpText>Checking this box will exclude this contact from the Household Name.</inlineHelpText>
        <label>Exclude from Household Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__FERPA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this person has opted out of disclosure of information per the Family Education Rights and Privacy Act.</description>
        <label>FERPA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__Financial_Aid_Applicant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this student has applied for financial aid.</description>
        <label>Financial Aid Applicant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__Former_First_Name__c</fullName>
        <description>The Contact&apos;s former first name.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The Contact&apos;s former first name.</inlineHelpText>
        <label>Former First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Former_Last_Name__c</fullName>
        <description>The Contact&apos;s former last name.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The Contact&apos;s former last name.</inlineHelpText>
        <label>Former Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Former_Middle_Name__c</fullName>
        <description>The Contact&apos;s former middle name.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The Contact&apos;s former middle name.</inlineHelpText>
        <label>Former Middle Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Gender__c</fullName>
        <description>Indicates the person&apos;s self-identified gender.</description>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__HIPAA_Detail__c</fullName>
        <description>Can be used to store information about the student Contact, such as the names of related Contacts authorized to communicate about the student. May require restricted field visibility so that only authorized users can view.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>HIPAA Detail</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>hed__HIPAA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Can be used to indicate that the student Contact&apos;s record is subject to Health Insurance Portability and Accountability Act requirements, without displaying the details of that information.</description>
        <label>HIPAA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__Mailing_County__c</fullName>
        <description>The county detail for the Mailing Address.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Mailing County</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Military_Background__c</fullName>
        <description>Describe this person&apos;s miltary service, for example, the branch of the military, length of time in the miltary, date of discharge, etc.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Military Background</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>hed__Military_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this person is currently serving or has previously served in the military.</description>
        <label>Military Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__Naming_Exclusions__c</fullName>
        <description>Selecting the Household Name option excludes this Contact from the Household Name. NOTE: The Household Formal Greeting and Household Informal Greeting options are not currently tied to existing product functionality.</description>
        <inlineHelpText>Determines which household names this contact is NOT included as part of.</inlineHelpText>
        <label>Naming Exclusions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Household__c.Name</fullName>
                </value>
                <value>
                    <fullName>Household__c.Formal_Greeting__c</fullName>
                </value>
                <value>
                    <fullName>Household__c.Informal_Greeting__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Other_County__c</fullName>
        <description>The county detail for the alternate Address.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Other County</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__PreferredPhone__c</fullName>
        <description>The phone (Work, Home, Mobile, Other) that this Contact prefers you to use.</description>
        <inlineHelpText>Which phone number should be used for most communications involving this Contact?</inlineHelpText>
        <label>Preferred Phone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Preferred_Email__c</fullName>
        <description>The email (University, Work, Alternate) that this Contact prefers you to use.</description>
        <inlineHelpText>Which email should be used for most communications involving this Contact?</inlineHelpText>
        <label>Preferred Email</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>University</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Alternate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Primary_Address_Type__c</fullName>
        <description>Indicate what kind of address the Mailing Address is, for example, Work, Home, or Other.</description>
        <inlineHelpText>Which type of address is the mailing address?</inlineHelpText>
        <label>Primary Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Primary_Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the main Household (Account record) this Contact is associated with.</description>
        <label>Primary Household</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts (Primary Household)</relationshipLabel>
        <relationshipName>Household_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Primary_Language__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The language the Contact prefers to use.</description>
        <inlineHelpText>The language the Contact prefers to use.</inlineHelpText>
        <label>Primary Language</label>
        <referenceTo>hed__Language__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>